--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul class="nav-list">
+                  <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                  <li class="nav-item"><a href="#aboutme" class="nav-link">About Me</a></li>
+                  <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                </ul>
+              </nav>
+        </div>
+        <div class="main">
+            <div class="container">
+                <h2 id="contacts">Contacts</h2>
+                <h2 id="aboutme">About Me</h2>
+                <h2 id="skills">Skills</h2>
+            </div>
+            <div class="footer"><div class="container"></div>
+        </div>
+        </div>
+    </div>
     
 </body>
 </html>
