fix: add sections

--- a/index.html
+++ b/index.html
@@ -9,25 +9,30 @@
 </head>
 <body>
     <div class="header">
-        <div class="container">
-            <nav class="nav">
-                <ul class="nav-list">
-                  <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                  <li class="nav-item"><a href="#aboutme" class="nav-link">About Me</a></li>
-                  <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                </ul>
-              </nav>
+        <h1>Alberta Kuzmenko</h1>
+        <h3>Intern Frontend Developer</h3>           
         </div>
         <div class="main">
-            <div class="container">
-                <h2 id="contacts">Contacts</h2>
-                <h2 id="aboutme">About Me</h2>
-                <h2 id="skills">Skills</h2>
+            <div class="section"><h2>Contacts</h2>
+                <ul>
+                 <li>Location: St. Petersburg, Russia</li>
+                 <li>Phone: +7 996 76 36 317</li>
+                 <li>E-mail: koraalisaa@gmail.com</li>
+                 <li>GitHub: AlbertaKuz</li>
+                </ul>
+              </div>           
+                <div class="section"><h2 id="aboutme">About Me</h2>
+                <p>Had a little experince with Python for Data Science in university, but decided to build my caree in front-end development. I have great soft-skills as for more than 4 years I was organizing social and cultural projects. Great at time-managment, communication and fast-learner.</p></div>
+                <div class="section"><h2 id="skills">Skills</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Beginner at JavaScript & React</li>
+                    <li>Git, GitHub</li>
+                    <li>VS Code</li>
+                </ul></div>
             </div>
-            <div class="footer"><div class="container"></div>
-        </div>
-        </div>
-    </div>
-    
+            <div class="footer">
+        </div>    
 </body>
 </html>
