feat: add photo and content

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="header">
-        <h1>Alberta Kuzmenko</h1>
-        <h3>Intern Frontend Developer</h3>           
+        <div class="name"><h1>Alberta Kuzmenko</h1><p>Intern Frontend Developer</p></div>  
+        <img src="IMG_5636.JPG" width="235px" height="235px" class="photo">     
         </div>
         <div class="main">
             <div class="section"><h2>Contacts</h2>
