feat: add footer & add more styles

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 <body>
     <div class="header">
-        <div class="name"><h1>Alberta Kuzmenko</h1><p>Intern Frontend Developer</p></div>  
-        <img src="IMG_5636.JPG" width="235px" height="235px" class="photo">     
+        <div class="name"><h1>Alberta Kuzmenko</h1><div class="job">Intern Frontend Developer</div></div>  
+        <img src="IMG_5636.JPG" width="215px" height="215px" class="photo" alt="profile photo">  
+        <div class="section"><h2>Contacts</h2>
+            <ul>
+             <li>Location: St. Petersburg, Russia</li>
+             <li>Phone: +7 996 76 36 317</li>
+             <li>E-mail: koraalisaa@gmail.com</li>
+             <li>GitHub: AlbertaKuz</li>
+            </ul>
+          </div>   
         </div>
-        <div class="main">
-            <div class="section"><h2>Contacts</h2>
-                <ul>
-                 <li>Location: St. Petersburg, Russia</li>
-                 <li>Phone: +7 996 76 36 317</li>
-                 <li>E-mail: koraalisaa@gmail.com</li>
-                 <li>GitHub: AlbertaKuz</li>
-                </ul>
-              </div>           
+        <div class="main">           
                 <div class="section"><h2 id="aboutme">About Me</h2>
-                <p>Had a little experince with Python for Data Science in university, but decided to build my caree in front-end development. I have great soft-skills as for more than 4 years I was organizing social and cultural projects. Great at time-managment, communication and fast-learner.</p></div>
+                <div class="content">Had a little experince with Python for Data Science in university, but decided to build my caree in front-end development. I have great soft-skills as for more than 4 years I was organizing social and cultural projects. Great at time-managment, communication and fast-learner.</div></div>
                 <div class="section"><h2 id="skills">Skills</h2>
                 <ul>
                     <li>HTML</li>
@@ -32,8 +32,20 @@
                     <li>Git, GitHub</li>
                     <li>VS Code</li>
                 </ul></div>
+                <div class="section">
+                    <h2>Language</h2>
+                    <ul>
+                        <li>English - B2 (Intermediate)</li>
+                        <li>Russian - Native</li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer">
-        </div>    
+            <footer>
+                <a class="my_github" href="https://github.com/AlbertaKuz"><img class="github_icon"src="https://annavoloshina.github.io/rsschool-cv/icons/github.svg" width="26" height="26">Visit My GitHub Account</a>
+                <p>2022</p>
+                <a href="https://rs.school/js/"><img class="rss_icon" src="rs_school_js.svg" width="73" height="26"></a>
+                
+
+            </footer>  
 </body>
 </html>
